--- a/src/main/webapp/WEB-INF/template/Layout.xhtml
+++ b/src/main/webapp/WEB-INF/template/Layout.xhtml
@@ -1,4 +1,4 @@
-<!DOCTYPE html>  <!-- localhost:8081/curso-jsf-e-primefaces-essencial/GestaoEmpresas.xhtml -->
+<!DOCTYPE html> 
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
